fix whitespace on mobile

--- a/src/scss/partials/_video.scss
+++ b/src/scss/partials/_video.scss
@@ -4,7 +4,10 @@
   
   img {
     display:none;
-  
+    
+    @include at-mobile {
+     display:block; 
+    }
   }
   
   video {
